--- a/package.json
+++ b/package.json
@@ -9,20 +9,21 @@
   "dependencies": {
     "@contentful/gatsby-transformer-contentful-richtext": "^13.1.0",
     "@contentful/rich-text-html-renderer": "^13.4.0",
+    "@mdx-js/mdx": "^0.20.3",
+    "@mdx-js/tag": "^0.20.3",
     "gatsby": "^2.3.3",
     "gatsby-image": "^2.0.38",
+    "gatsby-mdx": "^0.4.4",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sharp": "^2.0.34",
     "gatsby-source-contentful": "^2.0.48",
     "gatsby-source-filesystem": "^2.1.33",
+    "gatsby-transformer-json": "^2.1.11",
     "gatsby-transformer-remark": "^2.3.8",
     "gatsby-transformer-sharp": "^2.1.18",
-    "gatsby-transformer-json": "^2.1.11",
-    "gatsby-mdx": "^0.4.4",
-    "@mdx-js/mdx": "^0.20.3",
-    "@mdx-js/tag": "^0.20.3",
     "lodash": "^4.17.11",
     "react": "^16.8.6",
+    "react-country-flag": "^1.1.0",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
     "sharp": "^0.22.0"
